--- a/photos/index.html
+++ b/photos/index.html
@@ -10,7 +10,7 @@
 		
 	
 	<title>Screenshots | League of Legends Overlay Assistant </title>
-	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/Engineer/consolidated-2.css?rwcache=609400342" />
+	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/Engineer/consolidated-2.css?rwcache=609401686" />
 		
 	    
 </head>
@@ -26,7 +26,7 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav ml-auto"><li class="nav-item"><a href="../" rel="" class="nav-link">Home</a></li><li class="nav-item active"><a href="./" rel="" class="nav-link">Screenshots</a></li><li class="nav-item"><a href="../blog/" rel="" class="nav-link">Blog</a></li><li class="nav-item"><a href="../markdown-2/" rel="" class="nav-link">Team</a></li><li class="nav-item"><a href="../markdown/" rel="" class="nav-link">Technical Paper</a></li></ul>
+				<ul class="navbar-nav ml-auto"><li class="nav-item"><a href="../" rel="" class="nav-link">Home</a></li><li class="nav-item active"><a href="./" rel="" class="nav-link">Screenshots</a></li><li class="nav-item"><a href="../markdown/" rel="" class="nav-link">Technical Paper</a></li><li class="nav-item"><a href="../markdown-2/" rel="" class="nav-link">Team</a></li></ul>
 			</div>
 		</nav>
 
@@ -96,14 +96,14 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 footer-content">
-					<ul class="navbar-nav ml-auto"><li class="nav-item"><a href="../" rel="" class="nav-link">Home</a></li><li class="nav-item active"><a href="./" rel="" class="nav-link">Screenshots</a></li><li class="nav-item"><a href="../blog/" rel="" class="nav-link">Blog</a></li><li class="nav-item"><a href="../markdown-2/" rel="" class="nav-link">Team</a></li><li class="nav-item"><a href="../markdown/" rel="" class="nav-link">Technical Paper</a></li></ul>
+					<ul class="navbar-nav ml-auto"><li class="nav-item"><a href="../" rel="" class="nav-link">Home</a></li><li class="nav-item active"><a href="./" rel="" class="nav-link">Screenshots</a></li><li class="nav-item"><a href="../markdown/" rel="" class="nav-link">Technical Paper</a></li><li class="nav-item"><a href="../markdown-2/" rel="" class="nav-link">Team</a></li></ul>
 					CSCI 599 &copy; USC <a href="#" id="rw_email_contact">Contact Us</a><script type="text/javascript">var _rwObsfuscatedHref0 = "mai";var _rwObsfuscatedHref1 = "lto";var _rwObsfuscatedHref2 = ":zi";var _rwObsfuscatedHref3 = "hen";var _rwObsfuscatedHref4 = "ggo";var _rwObsfuscatedHref5 = "@us";var _rwObsfuscatedHref6 = "c.e";var _rwObsfuscatedHref7 = "du";var _rwObsfuscatedHref = _rwObsfuscatedHref0+_rwObsfuscatedHref1+_rwObsfuscatedHref2+_rwObsfuscatedHref3+_rwObsfuscatedHref4+_rwObsfuscatedHref5+_rwObsfuscatedHref6+_rwObsfuscatedHref7; document.getElementById("rw_email_contact").href = _rwObsfuscatedHref;</script>
 				</div>
 			</div>
 		</div>
 	</footer>
 
-	<script type="text/javascript" src="../rw_common/themes/Engineer/js/main.js?rwcache=609400342"></script>
+	<script type="text/javascript" src="../rw_common/themes/Engineer/js/main.js?rwcache=609401686"></script>
 </body>
 
 </html>
