--- a/photos/index.html
+++ b/photos/index.html
@@ -16,7 +16,7 @@
 
 	
 	<title>Screenshots | League of Legends Overlay Assistant </title>
-	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/Engineer/consolidated-2.css?rwcache=609403621" />
+	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/Engineer/consolidated-2.css?rwcache=609403948" />
 		
 	    
 </head>
@@ -53,7 +53,7 @@
                 <div class="row">
                     <div class="col-sm-12 main">
                         <div class="album-title">Gallery</div>
-<div class="album-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+<div class="album-description">Screenshots of main functions.</div>
 
 <div class="album-wrapper"> <!--Start album wrapper -->
 
@@ -109,7 +109,7 @@
 		</div>
 	</footer>
 
-	<script type="text/javascript" src="../rw_common/themes/Engineer/js/main.js?rwcache=609403621"></script>
+	<script type="text/javascript" src="../rw_common/themes/Engineer/js/main.js?rwcache=609403948"></script>
 </body>
 
 </html>
