change to square screenshots

--- a/photos/index.html
+++ b/photos/index.html
@@ -16,7 +16,7 @@
 
 	
 	<title>Screenshots | League of Legends Overlay Assistant </title>
-	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/Engineer/consolidated-2.css?rwcache=609403948" />
+	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/Engineer/consolidated-2.css?rwcache=609404346" />
 		
 	    
 </head>
@@ -57,31 +57,31 @@
 
 <div class="album-wrapper"> <!--Start album wrapper -->
 
-<div class="thumbnail-wrap" style="width:435px; height:435px;">
-<div class="thumbnail-frame" style="width:435px;">
-<a href="files/page2-1000-full.html"><img src="files/page2-1000-thumb.jpg" alt="Champion B/P interface" width="436" height="245"/></a>
-<p class="thumbnail-caption">Champion B/P interface</p>
+<div class="thumbnail-wrap" style="width:269px; height:269px;">
+<div class="thumbnail-frame" style="width:269px;">
+<a href="files/page2-1000-full.html"><img src="files/page2-1000-thumb.jpg" alt="Champion Ban Pick advice" width="269" height="269"/></a>
+<p class="thumbnail-caption">Champion Ban Pick advice</p>
 </div>
 </div>
 
-<div class="thumbnail-wrap" style="width:435px; height:435px;">
-<div class="thumbnail-frame" style="width:435px;">
-<a href="files/page2-1001-full.html"><img src="files/page2-1001-thumb.jpg" alt="Item Detection.png" width="436" height="245"/></a>
-<p class="thumbnail-caption">Item Detection.png</p>
+<div class="thumbnail-wrap" style="width:269px; height:269px;">
+<div class="thumbnail-frame" style="width:269px;">
+<a href="files/page2-1001-full.html"><img src="files/page2-1001-thumb.jpg" alt="Item Detection" width="269" height="269"/></a>
+<p class="thumbnail-caption">Item Detection</p>
 </div>
 </div>
 
-<div class="thumbnail-wrap" style="width:435px; height:435px;">
-<div class="thumbnail-frame" style="width:435px;">
-<a href="files/page2-1002-full.html"><img src="files/page2-1002-thumb.jpg" alt="Enemy Gank Warning.png" width="436" height="245"/></a>
-<p class="thumbnail-caption">Enemy Gank Warning.png</p>
+<div class="thumbnail-wrap" style="width:269px; height:269px;">
+<div class="thumbnail-frame" style="width:269px;">
+<a href="files/page2-1002-full.html"><img src="files/page2-1002-thumb.jpg" alt="Enemy Gank Warning" width="269" height="269"/></a>
+<p class="thumbnail-caption">Enemy Gank Warning</p>
 </div>
 </div>
 
-<div class="thumbnail-wrap" style="width:435px; height:435px;">
-<div class="thumbnail-frame" style="width:435px;">
-<a href="files/page2-1003-full.html"><img src="files/page2-1003-thumb.jpg" alt="Item Build Suggestion.png" width="436" height="245"/></a>
-<p class="thumbnail-caption">Item Build Suggestion.png</p>
+<div class="thumbnail-wrap" style="width:269px; height:269px;">
+<div class="thumbnail-frame" style="width:269px;">
+<a href="files/page2-1003-full.html"><img src="files/page2-1003-thumb.jpg" alt="Item Build Advice" width="269" height="269"/></a>
+<p class="thumbnail-caption">Item Build Advice</p>
 </div>
 </div>
 
@@ -109,7 +109,7 @@
 		</div>
 	</footer>
 
-	<script type="text/javascript" src="../rw_common/themes/Engineer/js/main.js?rwcache=609403948"></script>
+	<script type="text/javascript" src="../rw_common/themes/Engineer/js/main.js?rwcache=609404346"></script>
 </body>
 
 </html>
