update technical paper

--- a/markdown/index.html
+++ b/markdown/index.html
@@ -17,7 +17,7 @@
 
 	
 	<title>Technical Detail | League of Legends Overlay Assistant </title>
-	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/Engineer/consolidated-3.css?rwcache=609403621" />
+	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/Engineer/consolidated-3.css?rwcache=609464476" />
 		
 	    
 </head>
@@ -55,7 +55,7 @@
                     <div class="col-sm-12 main">
                         <h2 id="technicalpaperofleagueoflegendsassistanttool">Technical Paper of League of Legends Assistant Tool</h2>
 
-<p><a href="../resources/CSCI-599-Final-Project-Technical-Paper-of-League-of-Legends-Assistant-Tool.pdf">Download PDF Version</a></p>
+<p><a href="../resources/Technical-Paper.pdf">Download PDF Version</a></p>
 
 <h2 id="1.introduction:">1. Introduction:</h2>
 
@@ -78,6 +78,7 @@
 <ul>
 <li><p>The first one is about champion ban/pick, we will give advice based on the enemy team's champion bans and help our users get champions they are afraid of. </p></li>
 <li><p>The second function will be an in-game item build guide, we will detect the enemy team's build and your champion select, give advice on your next build.</p></li>
+<li><p>The last one is a mini-map warning system, we detect enemy’s movement and send warnings if we believe you are in danger.</p></li>
 </ul>
 
 <h2 id="2.priorresearchrelatedtoleagueoflegends:">2.Prior Research Related to League of Legends:</h2>
@@ -263,7 +264,7 @@
 		</div>
 	</footer>
 
-	<script type="text/javascript" src="../rw_common/themes/Engineer/js/main.js?rwcache=609403621"></script>
+	<script type="text/javascript" src="../rw_common/themes/Engineer/js/main.js?rwcache=609464476"></script>
 </body>
 
 </html>
