--- a/markdown-2/index.html
+++ b/markdown-2/index.html
@@ -17,7 +17,7 @@
 
 	
 	<title>Team | League of Legends Overlay Assistant </title>
-	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/Engineer/consolidated-4.css?rwcache=609403621" />
+	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/Engineer/consolidated-4.css?rwcache=609728734" />
 		
 	  <style type="text/css" media="all">table {margin: auto}</style>  
 </head>
@@ -78,8 +78,8 @@
     <td style="text-align:center;">Xihao Zhou</td>
 </tr>
 <tr>
-    <td style="text-align:center;"><a href="https://www.linkedin.com/in/aaron-yang-b73605103/">Linkedin</a></td>
-    <td style="text-align:center;"><a href="https://www.linkedin.com/in/xihao-zhou-0b3812194/">Linkedin</a></td>
+    <td style="text-align:center;"><a href="https://www.linkedin.com/in/aaron-yang-b73605103/">Linkedin</a> <a href="mailto:aaron19940628@gmail.com">Email</a></td>
+    <td style="text-align:center;"><a href="https://www.linkedin.com/in/xihao-zhou-0b3812194/">Linkedin</a> <a href="mailto:xihaozho@usc.edu">Email</a></td>
 </tr>
 <tr>
     <td style="text-align:center;"><img src="../resources/ziheng.jpg" alt="ziheng.jpg"></td>
@@ -90,8 +90,8 @@
     <td style="text-align:center;">Hao Yang</td>
 </tr>
 <tr>
-    <td style="text-align:center;"><a href="https://www.linkedin.com/in/ziheng-gong-997a44178/">Linkedin</a></td>
-    <td style="text-align:center;"><a href="https://www.linkedin.com/in/hao-yang-000a4a195/">Linkedin</a></td>
+    <td style="text-align:center;"><a href="https://www.linkedin.com/in/ziheng-gong-997a44178/">Linkedin</a> <a href="mailto:oscargong1995@gmail.com">Email</a></td>
+    <td style="text-align:center;"><a href="https://www.linkedin.com/in/hao-yang-000a4a195/">Linkedin</a> <a href="mailto:hyang01@usc.edu">Email</a></td>
 </tr>
 </tbody>
 </table>
@@ -132,7 +132,7 @@
 		</div>
 	</footer>
 
-	<script type="text/javascript" src="../rw_common/themes/Engineer/js/main.js?rwcache=609403621"></script>
+	<script type="text/javascript" src="../rw_common/themes/Engineer/js/main.js?rwcache=609728734"></script>
 </body>
 
 </html>
