--- a/markdown/index.html
+++ b/markdown/index.html
@@ -17,9 +17,23 @@
 
 	
 	<title>Technical Detail | League of Legends Overlay Assistant </title>
-	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/Engineer/consolidated-3.css?rwcache=609464476" />
+	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/Engineer/consolidated-3.css?rwcache=609822996" />
 		
-	    
+	  <style type="text/css" media="all">.iframe-container {
+	overflow: hidden;
+	padding-top: 56.25%;
+	width: 100%;
+	position: relative;
+  }
+   
+.iframe-container iframe {
+	 border: 0;
+	 height: 100%;
+	 left: 0;
+	 position: absolute;
+	 top: 0;
+	 width: 100%;
+}</style>  
 </head>
 
 <!-- This page was created with RapidWeaver from Realmac Software. http://www.realmacsoftware.com -->
@@ -53,7 +67,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 main">
-                        <h2 id="technicalpaperofleagueoflegendsassistanttool">Technical Paper of League of Legends Assistant Tool</h2>
+                        <h1 style="text-align:center">Presentation</h1>
+
+<div class="iframe-container">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/EZk_3IwCPaw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+<h1 style="text-align:center">Technical Paper</h1>
 
 <p><a href="../resources/Technical-Paper.pdf">Download PDF Version</a></p>
 
@@ -81,7 +101,7 @@
 <li><p>The last one is a mini-map warning system, we detect enemy’s movement and send warnings if we believe you are in danger.</p></li>
 </ul>
 
-<h2 id="2.priorresearchrelatedtoleagueoflegends:">2.Prior Research Related to League of Legends:</h2>
+<h2 id="2.priorresearch">2.Prior Research</h2>
 
 <h3 id="2.1leagueai">2.1 League AI</h3>
 
@@ -264,7 +284,7 @@
 		</div>
 	</footer>
 
-	<script type="text/javascript" src="../rw_common/themes/Engineer/js/main.js?rwcache=609464476"></script>
+	<script type="text/javascript" src="../rw_common/themes/Engineer/js/main.js?rwcache=609822996"></script>
 </body>
 
 </html>
